# control_for_manuel-1.0

./: README.md  pyproject.toml  robot_console.py
manuel/: manuel1.urdf
